syntax = "proto3";

import "testdata/another/department.proto";

message ExtraInfo {
    string jobTitle = 1;
    string location = 2;
    Department department = 3;
}